# calcite

./: .gitignore  .mailmap  .travis.yml  build.gradle.kts  c.sh  c.sql  deploy-looker.sh  gradle.properties  pom.xml  settings.gradle.kts  sqlline  summary-of-calcite-4885.md
avatica/: pom.xml
babel/: build.gradle.kts  pom.xml
babel/src/main/codegen/: config.fmpp
babel/src/main/codegen/includes/: parserImpls.ftl  parserPostgresqlImpls.ftl
babel/src/test/resources/sql/: big-query.iq  redshift.iq
bom/: build.gradle.kts
bug-5052/: BUILD.bazel  README
bug-5052/src/test/kotlin/com/example/bazeltest/: ExampleTest.kt
bug-5052/src/test/resources/com/example/bazeltest/: ExampleTest.xml
core/: build.gradle.kts  pom.xml
core/src/main/codegen/: config.fmpp  default_config.fmpp  default_parser.fmpp
core/src/main/codegen/templates/: Parser.jj
core/src/test/codegen/: config.fmpp
core/src/test/resources/: hsqldb-model.json  log4j2-test.xml
core/src/test/resources/sql/: agg.iq  array.iq  attribute.iq  blank.iq  cast-datetime-format.iq  dummy.iq  functions.iq  join.iq  match.iq  (+13 more)
doc/: STREAM.md
kafka/: pom.xml
piglet/src/main/javacc/: PigletParser.jj
plus/: build.gradle.kts
plus/src/test/resources/: sqlsh.json
server/src/main/codegen/: config.fmpp
site/_docs/: adapter.md  algebra.md  history.md  howto.md  innodb_adapter.md  os_adapter.md  reference.md  spatial.md  tutorial.md
src/main/config/checkstyle/: checker.xml  suppressions.xml
src/main/config/forbidden-apis/: signatures.txt
testkit/: build.gradle.kts
ubenchmark/: build.gradle.kts
(+1089 files in other folders)
