kt_jvm_test(
    name = "ExampleTest",
    srcs = glob(["src/test/kotlin/com/example/bazeltest/ExampleTest.kt"]),
    main_class = "org.junit.platform.console.ConsoleLauncher",
    resources = ["src/test/resources/com/example/bazeltest/ExampleTest.xml"],
    deps = [
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_apache_calcite_calcite_testkit",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
    ],
)
